// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buttonRegular component basic button regular with custom testID" 1`] = `
<View
  accessibilityLabel="button test"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "width": "100%",
    }
  }
  testID="custom testID"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#333333",
          "borderRadius": 2,
          "borderTopColor": "#272727",
          "borderTopWidth": 4,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "paddingBottom": 2,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "BwModelica-Bold",
            "fontSize": 14,
            "letterSpacing": 0.21,
            "opacity": 0.87,
            "textAlign": "center",
            "textTransform": "uppercase",
          },
        ]
      }
    >
      Button test
    </Text>
  </View>
</View>
`;

exports[`buttonRegular component basic button regular with disabled" 1`] = `
<View
  accessibilityLabel="button test"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <View
    disabled={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#333333",
          "borderRadius": 2,
          "borderTopColor": "#272727",
          "borderTopWidth": 4,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "opacity": 0.38,
          "paddingBottom": 2,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "BwModelica-Bold",
            "fontSize": 14,
            "letterSpacing": 0.21,
            "opacity": 0.87,
            "textAlign": "center",
            "textTransform": "uppercase",
          },
        ]
      }
    >
      Button test
    </Text>
  </View>
</View>
`;

exports[`buttonRegular component basic button regular with loading" 1`] = `
<View
  accessibilityLabel="button test"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#333333",
          "borderRadius": 2,
          "borderTopColor": "#272727",
          "borderTopWidth": 4,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "paddingBottom": 2,
        },
      ]
    }
  >
    <ActivityIndicator
      animating={true}
      color="#ffffff"
      hidesWhenStopped={true}
      size="small"
    />
  </View>
</View>
`;

exports[`buttonRegular component basic button regular with text, onActionHandle, accessibilityLabel and testID "ButtonRegular" 1`] = `
<View
  accessibilityLabel="button test"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#333333",
          "borderRadius": 2,
          "borderTopColor": "#272727",
          "borderTopWidth": 4,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "paddingBottom": 2,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "BwModelica-Bold",
            "fontSize": 14,
            "letterSpacing": 0.21,
            "opacity": 0.87,
            "textAlign": "center",
            "textTransform": "uppercase",
          },
        ]
      }
    >
      Button test
    </Text>
  </View>
</View>
`;
